syntax = "proto3";

package rule.v1;

option go_package = "github.com/tkeel-io/rule-manager/rule/v1;v1";
option java_multiple_files = true;
option java_package = "rule.v1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // @msg=未知类型
  // @code=UNKNOWN
  ERR_UNKNOWN = 0;

  // @msg=成功
  // @code=OK
  ERR_OK_STATUS = 1;

  // @msg=未找到资源
  // @code=NOT_FOUND
  ERR_NOT_FOUND = 2;

  // @msg=请求参数无效
  // @code=INVALID_ARGUMENT
  ERR_INVALID_ARGUMENT = 3;

  // @msg=请求后端存储错误
  // @code=INTERNAL
  ERR_INTERNAL_STORE = 4;

  // @msg=内部错误
  // @code=INTERNAL
  ERR_INTERNAL_ERROR = 5;

  // @msg=未找到对应规则
  // @code=NOT_FOUND
  ERR_RULE_NOT_FOUND = 6;

  // @msg=请确保用户对该资源拥有足够的权限
  // @code=PERMISSION_DENIED
  ERR_FORBIDDEN = 7;

  // @msg=请确保用户权限
  // @code=PERMISSION_DENIED
  ERR_UNAUTHORIZED = 8;

  // @msg=建立连接失败
  // @code=OK
  ERR_FAILED_KAFKA_CONNECTION = 9;

  // @msg=成功
  // @code=OK
  ERR_OK_KAFKA_CONNECTION = 10;

  // @msg=重复创建
  // @code=INVALID_ARGUMENT
  ERR_DUPLICATE_CREATE = 11;
}